Fix text jitter from galaxy display on narrower screens

--- a/stylesheets/new-ui-styles.css
+++ b/stylesheets/new-ui-styles.css
@@ -346,7 +346,7 @@ body.t-normal {
 }
 
 .reset-container {
-  width: 33%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
