--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1147,7 +1147,7 @@ screen and (max-width: 480px) {
 .o-primary-btn--quick-reset {
   font-size: 1.2rem;
   width: 20rem;
-  height: 5rem;
+  height: 7rem;
 }
 
 .o-primary-btn--buy-id {
